@@ -7,10 +7,10 @@ import org.twelve.gcp.outline.builtin.Namespace;
 import java.util.List;
 
 public class NamespaceNode extends Node {
-    public NamespaceNode(AST ast, List<Token> names) {
+    public NamespaceNode(AST ast, List<Token<String>> names) {
         super(ast, null);
         Namespace outline = null;
-        for (Token name : names) {
+        for (Token<String> name : names) {
             outline = new Namespace(new Identifier(ast,name), outline);
             this.addNode(new Identifier(ast, name, outline, false));
         }
@@ -18,11 +18,11 @@ public class NamespaceNode extends Node {
 
     @Override
     public Location loc() {
-        if (this.nodes().size() == 0) {
+        if (this.nodes().isEmpty()) {
             return new SimpleLocation(0, 0);
         } else {
-            return new SimpleLocation(this.nodes().get(0).loc().start(),
-                    this.nodes().get(this.nodes().size() - 1).loc().end());
+            return new SimpleLocation(this.nodes().getFirst().loc().start(),
+                    this.nodes().getLast().loc().end());
         }
     }
 
@@ -30,8 +30,8 @@ public class NamespaceNode extends Node {
     public String lexeme() {
         StringBuilder result = new StringBuilder();
         for (Node node : this.nodes()) {
-            result.append("." + node.lexeme());
+            result.append(".").append(node.lexeme());
         }
-        return result.length() == 0 ? "" : result.substring(1);
+        return result.isEmpty() ? "" : result.substring(1);
     }
 }
